[tool.poetry]
name = "wiskoro-backend"
version = "0.1.0"
description = "FastAPI backend voor Wiskoro chatbot"
authors = ["Jouw Naam"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
requests = "^2.28.1"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
asyncpg = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
